Move any-date-parser to dependency

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Josh Freeman <freejosh@gmail.com>",
   "private": true,
   "dependencies": {
+    "any-date-parser": "^1.5.4",
     "esbuild": "^0.20.2",
     "esbuild-plugin-clean": "^1.0.1",
     "esbuild-plugin-copy": "^2.1.1"
