Centralize filename references via build file

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "any-date-parser": "^1.5.4",
     "esbuild": "^0.20.2",
     "esbuild-plugin-clean": "^1.0.1",
-    "esbuild-plugin-copy": "^2.1.1"
+    "esbuild-plugin-copy": "^2.1.1",
+    "esbuild-plugin-environment": "^0.3.0",
+    "esbuild-plugin-write-file": "^0.0.4"
   }
 }
